# back-office

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  composer.json  example.php  example2.php  php.ini-production
.github/workflows/: docker-image-publish.yml
config/: application.config.toml  application.yaml  database.yaml
config/sync/: admin_ui_only.settings.yml  backup_migrate.backup_migrate_destination.private_files.yml  backup_migrate.backup_migrate_schedule.daily_schedule.yml  backup_migrate.backup_migrate_source.default_db.yml  backup_migrate.backup_migrate_source.entire_site.yml  backup_migrate.backup_migrate_source.private_files.yml  backup_migrate.backup_migrate_source.public_files.yml  block.block.claro_breadcrumbs.yml  block.block.claro_content.yml  block.block.claro_help.yml  block.block.claro_help_search.yml  block.block.claro_local_actions.yml  block.block.claro_messages.yml  block.block.claro_page_title.yml  block.block.claro_primary_local_tasks.yml  block.block.claro_secondary_local_tasks.yml  block.block.gin_breadcrumbs.yml  block.block.gin_content.yml  block.block.gin_help.yml  block.block.gin_local_actions.yml  block.block.gin_messages.yml  block.block.gin_page_title.yml  block.block.gin_primary_local_tasks.yml  block.block.gin_secondary_local_tasks.yml  block.block.olivero_account_menu.yml  block.block.olivero_breadcrumbs.yml  block.block.olivero_content.yml  block.block.olivero_help.yml  block.block.olivero_languageswitcher.yml  block.block.olivero_main_menu.yml  block.block.olivero_messages.yml  block.block.olivero_page_title.yml  block.block.olivero_powered.yml  (+497 more)
migrations/: 20240811120251_create_authors_table.sql  20240811120253_create_articles_table.sql  20240814172541_add_slug_to_articles_table.sql  20240910194954_create_article_status_type.sql  20240910195012_create_articles_table.sql
src/: application.rs  container.rs  lib.rs  main.rs
tests/: api_article_controllers.rs  api_get_article_controllers.rs  article_controllers.rs  authentication_controllers.rs  save_article_controller.rs
(+236 files in other folders)
