[package]
name = "back-office"
version = "0.1.0"
edition = "2021"
authors = ["Tiagocode <santiagomm1997@gmail.com>"]

[[bin]]
path = "src/main.rs"
name = "back-office"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { version = "0.1.81" }
actix-web = { version = "4" }
actix-files = { version = "0.6.6" }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = { version = "0.20" }
anyhow = { version = "1" }
argon2 = { version = "0.5", features = ["std"] }
base64 = { version = "0.22" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
fakeit = { version = "1.3.0" }
handlebars = { version = "6.0.0", features = ["dir_source"] }
log = { version = "0.4.21" }
mockall = { version = "0.13.0" }
mockall_double = { version = "0.3.1" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1" }
serde_json = { version = "1" }
serde-aux = { version = "4" }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "chrono", "migrate", "time", "macros", "postgres", "uuid"] }
thiserror = { version = "1.0" }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-actix-web = { version = "0.7" }
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = { version = "1.9.0" }
uuid = { version = "1.9.0", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
claim = { version = "0.5.0" }
fake = { version = "~2.9.2" }
once_cell = { version = "1.7.2" }
mockall = { version = "0.13.0" }
serde_urlencoded = { version = "0.7.1" }
wiremock = { version = "0.6" }
